# kzg-poly-commit-exploration

./: .env.example  .gitignore  Cargo.toml  README.md
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: workflow.yml
benches/: evaluation_proof.rs  evaluation_verification.rs  polynomial_commitment.rs  polynomial_evaluation.rs  trusted_setup.rs
src/: curves.rs  lib.rs  main.rs  polynomial.rs  scalar.rs  trusted_setup.rs
