[package]
name = "kzg_poly_commit_exploration"
version = "0.1.0"
edition = "2024"
description = "A command line parser in order to play with KZG polynomial commitment"
readme = "README.md"

[dependencies]
anyhow = "1.0.98"
blst = { version = "0.3.15", features = [] }
clap = { version = "4.5.41", features = ["derive"] }
dotenvy = "0.15.7"
log = "0.4.27"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
simple_logger = "5.0.0"
thiserror = "2.0.12"

[dev-dependencies]
fake = "4.3.0"
hex = "0.4.3"
num-bigint = "0.4.6"
